GNOME Bugzilla – Bug 623815
Don't check sender for GDBusProxy objects where name is not set
Last modified: 2010-07-14 15:22:36 UTC
I create a GDBusProxy with a peer to peer connection, and the g-name is NULL. But the GDBusProxy object can not received any signals from peer.
Created attachment 165460 [details] [review] A proposal to fix this problem. If the proxy's name_ower is NULL, it does not test the the signal sender anymore.
Actually this works just fine in normal peer-to-peer cases, there's even a test for it. The problem you are running into is that the sender field is set for the GDBusMessage for the signal. So technically we're actually doing the right thing already. I agree, however, that it's useless checking for the sender if the name wasn't set on the proxy. So let's do the patch. Some comments on the patch - functionally, the patch looks fine (ie. it works) - the description (both the patch and bug desc) is not accurate. I've updated that - we generally require test cases for core functionality like this so I added one http://git.gnome.org/browse/glib/commit/?id=497edd8b40edfbf85e029a9300e0d99ac6f08630